Initial work to upgrade to Apache NetBeans 21 and OpenJDK 21
- Upgrade build target platforms
- Update README.md with version
- Address some deprecation notices from compilation